--- a/sass/componets/_container.scss
+++ b/sass/componets/_container.scss
@@ -2,3 +2,17 @@
     width: 1090px;
     margin: 0 auto;
 }
+
+section {
+    position: relative;
+    &::before {
+        content: "";
+        width: 536px;
+        height: 1px;
+        background-color: $black;
+        position: absolute;
+        top: 0;
+        transform: translateX(-50%);
+        left: 50%;
+    }
+}
